--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/lc60005457/parcel-demo-for-issues#readme",
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
-    "parcel-bundler": "^1.3.1"
+    "parcel-bundler": "^1.4.1",
+    "vue": "^2.5.13"
   }
 }
